health attribute, melee ability

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,4 +15,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GasUdemy")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GasUdemy")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="GasUdemyGameModeBase")
+bUseFixedFrameRate=False
+FixedFrameRate=300.000000
 
