--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,5 +7,6 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cooldown",DevComment="")
++GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DealDamage",DevComment="")
 
