--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,4 +9,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DealDamage",DevComment="")
++GameplayTagList=(Tag="State.Death",DevComment="")
 
