finish team component, team relations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 bUseFixedFrameRate=False
 FixedFrameRate=300.000000
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AntiAliasing=2
+
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/GasUdemy.TeamSettingsDatabase.TeamRelations",NewName="/Script/GasUdemy.TeamSettingsDatabase.TeamRelationStructArray")
++PropertyRedirects=(OldName="/Script/GasUdemy.TeamSettingsDatabase.TeamConfigArr",NewName="/Script/GasUdemy.TeamSettingsDatabase.TeamConfigStructArray")
