mana, stamina, smooth change ui bars, health regen ability

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,7 +7,11 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cooldown",DevComment="")
++GameplayTagList=(Tag="Skills.Attack.Melee.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DealDamage",DevComment="")
++GameplayTagList=(Tag="Skills.HealthRestore.Cooldown",DevComment="")
++GameplayTagList=(Tag="Skills.HealthRestore.Cost",DevComment="")
++GameplayTagList=(Tag="Skills.HealthRestore.Effect",DevComment="")
 +GameplayTagList=(Tag="State.Death",DevComment="")
 
