char abilities apply on startup checkbar for startup granted abilities fixed widget bars initial values set stamina mana restoration on startup	GA iss4	TODO:	fix team config initialization (it's readed right only when open asset in editor) cpp character: add/remove tag unique, fullhealth tag to block health restore ability melee consumes stamina health restore ability executoion now triggered from anim notify ga cast base class with anim montage notify trigger

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ ProjectID=4A382AFB48DFD8A02C9BC1BBF0A67FDF
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="TeamSettings",AssetBaseClass=/Script/GasUdemy.TeamSettingsDatabase,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=0,ChunkId=-1,bApplyRecursively=False,CookRule=Unknown))
-+PrimaryAssetTypesToScan=(PrimaryAssetType="TeamConfig",AssetBaseClass=/Script/GasUdemy.TeamConfig,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=0,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="TeamConfig",AssetBaseClass=/Script/GasUdemy.TeamConfig,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=1,ChunkId=-1,bApplyRecursively=False,CookRule=AlwaysCook))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
