--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Attributes.Health.Full",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
@@ -13,5 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.HealthRestore.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Effect",DevComment="")
++GameplayTagList=(Tag="Skills.ManaRegen.Effect",DevComment="hero startup effect")
++GameplayTagList=(Tag="Skills.StaminaRegen.Effect",DevComment="")
 +GameplayTagList=(Tag="State.Death",DevComment="")
 
