gameplay cue with particle health restore

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Health.Full",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HealthRestore",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
