dash ability wip, ga_blueprintbase

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,8 +20,9 @@ FixedFrameRate=300.000000
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AntiAliasing=2
-
+r.DefaultFeature.MotionBlur=False
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/GasUdemy.TeamSettingsDatabase.TeamRelations",NewName="/Script/GasUdemy.TeamSettingsDatabase.TeamRelationStructArray")
 +PropertyRedirects=(OldName="/Script/GasUdemy.TeamSettingsDatabase.TeamConfigArr",NewName="/Script/GasUdemy.TeamSettingsDatabase.TeamConfigStructArray")
+
