--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.Attack.Melee.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Skills.Attack.Melee.DealDamage",DevComment="")
++GameplayTagList=(Tag="Skills.Dash",DevComment="")
++GameplayTagList=(Tag="Skills.Dash.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Effect",DevComment="")
