on dash stun effect and damage, fixed combo for melee

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,10 +14,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skills.Attack.Melee.DealDamage",DevComment="")
 +GameplayTagList=(Tag="Skills.Dash",DevComment="")
 +GameplayTagList=(Tag="Skills.Dash.Cooldown",DevComment="")
++GameplayTagList=(Tag="Skills.Dash.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Cost",DevComment="")
 +GameplayTagList=(Tag="Skills.HealthRestore.Effect",DevComment="")
 +GameplayTagList=(Tag="Skills.ManaRegen.Effect",DevComment="hero startup effect")
 +GameplayTagList=(Tag="Skills.StaminaRegen.Effect",DevComment="")
 +GameplayTagList=(Tag="State.Death",DevComment="")
++GameplayTagList=(Tag="State.Stun",DevComment="")
 
